crates/pyenum-derive/tests/ui/fail/duplicate_auto_flag.stderr
error: variant `Write` has discriminant `1`, which was already used by `Read`; Python would make the second variant an alias of the first and break Rust-side round-trip identity
  --> tests/ui/fail/duplicate_auto_flag.rs:10:5
   |
10 |     Write = 1,
   |     ^^^^^
